--- a/app/views/attendances/_attendance_change.html.erb
+++ b/app/views/attendances/_attendance_change.html.erb
@@ -1,8 +1,10 @@
  <div class="modal-dialog modal-lg modal-dialog-center">
     <div class="modal-content">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+      </div>  
       <div class="modal-body">
         <%= form_with(model: @user, url: update_attendance_change_user_attendances_path(@user), method: :patch, local: true) do |f| %> 
           <% @attendances.each do |id, attendance| %>  
