--- a/app/views/attendances/_edit_overwork_request.html.erb
+++ b/app/views/attendances/_edit_overwork_request.html.erb
@@ -9,7 +9,7 @@
       </button>
       <h1 class="modal-title">残業申請</h1>
     </div>
-    <div class="modal-body"><!--form_withのモデルは@attendanceの情報の更新のため@attendance-->
+    <div class="modal-body"><!--form_withのモデルは@attendanceの情報の更新のため@attendanceはパラメーターの-->
       <%= form_with(model: @attendance, url: update_overwork_request_user_attendance_path(@user, @attendance), local: true, method: :patch) do |f| %>
         <table class="table table-bordered table-hover" id="table-attendances">
           <thead>
