所属長承認モーダル完成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -123,7 +123,7 @@
             <% if day.started_at.present? && day.finished_at.present? %>
               <%= str_times = working_times(day.started_at.floor_to(15.minutes), day.finished_at.floor_to(15.minutes)) %>
               <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
-            <% end %>     
+            <% end %>
           </td>
           <td><%= day.note %></td>
           <td><%= day.plan_finished_at.strftime('%H')if day.plan_finished_at.present? %></td>
@@ -158,7 +158,7 @@
         <%= f.hidden_field :first_day, :value => @first_day %>
         <tr>
           <td></td>
-          <td colspan = "2"><%= format_basic_info(@user.basic_time).to_f*@worked_sum %></td>
+          <td colspan = "2"></td>
           <td colspan = "6"></td>
           <td><%= format("%.2f", @total_working_times.to_f) %></td>
           <td colspan="5"></td>
