--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -162,7 +162,16 @@
           <td colspan = "6"></td>
           <td><%= format("%.2f", @total_working_times.to_f) %></td>
           <td colspan="5"></td>
-          <td>所属長承認&emsp;
+          <td>
+            <% if @attendance_first_day.user_one_month_attendance_status.blank? %>
+              <%= "所属長 未" %>
+            <% elsif @attendance_first_day.user_one_month_attendance_status == "申請中" %> 
+              <%= "#{@attendance_first_day.instructor_confirmation}へ申請中" %>
+            <% elsif @attendance_first_day.user_one_month_attendance_status == "承認" %>
+              <%= "#{@attendance_first_day.instructor_confirmation}承認" %>
+            <% elsif @attendance_first_day.user_one_month_attendance_status == "否認" %>
+              <%= "#{@attendance_first_day.instructor_confirmation}否認" %>
+            <% end %>
           <br><%= f.collection_select :instructor_confirmation, @superior, :name, :name %>
           <br><%= f.submit "申請", class: "btn btn-primary" %></td>
         </tr>
