--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,13 +20,13 @@
   <%= f.password_field :password, class: 'form-control' %>
   
   <%= f.label :basic_time, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :basic_time, class: "form-control" %>
+  <%= f.time_field :basic_time, class: "form-control" %>
   
   <%= f.label :designated_work_start_time, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :designated_work_start_time, class: "form-control" %>
+  <%= f.time_field :designated_work_start_time, class: "form-control" %>
   
   <%= f.label :designated_work_end_time, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :designated_work_end_time, class: "form-control" %>
+  <%= f.time_field :designated_work_end_time, class: "form-control" %>
   
  
 
