--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -20,13 +20,13 @@
   <%= f.password_field :password, class: 'form-control' %>
   
   <%= f.label :基本勤務時間, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :basic_time, class: "form-control" %>
+  <%= f.time_field :basic_time, class: "form-control" %>
   
   <%= f.label :指定勤務開始時間, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :designated_work_start_time, class: "form-control" %>
+  <%= f.time_field :designated_work_start_time, class: "form-control" %>
   
   <%= f.label :指定勤務終了時間, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :designated_work_end_time, class: "form-control" %>
+  <%= f.time_field :designated_work_end_time, class: "form-control" %>
   
   <%= f.submit :編集する, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
 <% end %>
