--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
 <br><div class="btn-users-show">
 <%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
 <%= link_to "CSV出力", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
-<br><%= link_to "勤怠修正ログ（承認済）",kintailog_user_path(@user), remote: true, class: "btn btn-success" %></br>
+<br><%= link_to "勤怠修正ログ（承認済）",attendance_log_user_path(@user), remote: true, class: "btn btn-success" %></br>
 </div>
 
 <div>
@@ -126,9 +126,13 @@
             <% end %>
           </td>
           <td><%= day.note %></td>
-          <td><%= day.plan_finished_at.strftime('%H')if day.plan_finished_at.present? %></td>
-          <td><%= day.plan_finished_at.strftime('%M')if day.plan_finished_at.present? %></td>
-          <td></td>
+          <td><%= day.plan_finished_at.strftime('%H') if day.plan_finished_at.present? %></td>
+          <td><%= day.plan_finished_at.strftime('%M') if day.plan_finished_at.present? %></td>
+          <td>
+            <% if day.plan_finished_at.present? %> 
+              <%= over_time(day.tomorrow, day.plan_finished_at, @user.designated_work_end_time) %>
+            <% end %>
+          </td>
           <td><%= day.business_processing_contents %></td>
           <td>
             <% if day.overtime_status == "申請中" %> 
@@ -182,6 +186,6 @@
 <div id="attendance-change" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="edit-superior-approval" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="edit-overwork-request" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
-<div id="kintailog" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="attendance-log" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="edit-superior-announcement" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
     
