--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -29,11 +29,11 @@
           <td><%= l(day.worked_on, format: :short) %></td>
           <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
           <% if logged_in? && (Date.current < day.worked_on) %>
-            <td><%= attendance.time_field :before_started_at, readonly: true, class: "form-control" %></td>
-            <td><%= attendance.time_field :before_finished_at, readonly: true, class: "form-control" %></td>
+            <td><%= attendance.time_field :edit_started_at, readonly: true, class: "form-control" %></td>
+            <td><%= attendance.time_field :edit_finished_at, readonly: true, class: "form-control" %></td>
           <% else %>
-            <td><%= attendance.time_field :before_started_at, class: "form-control" %></td>
-            <td><%= attendance.time_field :before_finished_at, class: "form-control" %></td>
+            <td><%= attendance.time_field :edit_started_at, class: "form-control" %></td>
+            <td><%= attendance.time_field :edit_finished_at, class: "form-control" %></td>
           <% end %>
           <td></td>
           <td>
