--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,10 @@
               アカウント<b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
+              <% if current_user.admin? %>
+              <% else %>
               <li><%= link_to "プロフィール", current_user %></li>
+              <% end %>
               <li><%= link_to "設定",  edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
