勤怠A見た感じ終了これから提出

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,7 +1,13 @@
 <% provide(:title, "Top") %>
 <div class="center jumbotron">
   <h1>勤怠管理システム</h1>
+  <% if logged_in? %>
+   <a class= "btn btn-lg btn-primary disabled">ログイン済み</a>
+    <a class= "btn primary disabled">アカウント作成済み</a>
+  <% else %>
   <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
   <p>アカウント作成は<%= link_to "こちら", signup_path, class: "btn primary" %>から</p>
+  <% end %>
+
 </div>
   
