時間外時間

--- a/app/views/attendances/_edit_superior_announcement.html.erb
+++ b/app/views/attendances/_edit_superior_announcement.html.erb
@@ -45,7 +45,7 @@
                         <td><%= day.plan_finished_at.strftime("%R") %></td>
                         <td><%= format_basic_info(@user.designated_work_end_time) %></td>
                         <td><% if day.plan_finished_at.present? %> 
-                              <%= over_time(day.tomorrow, day.plan_finished_at, @user.designated_work_end_time) %>
+                              <%= over_time(day.tomorrow, day.plan_finished_at, @user.designated_work_end_time, day.started_at) %>
                             <% end %></td>
                         <td><%= day.business_processing_contents %></td>
                         <td><%= a.select :overtime_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
