nurse,介護職,相談員,追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
     </tr>
   </table>
 </div>
-<% if current_user.superior? %>
+<% if current_user.nurse? %>
 <div>
   <% if @user_one_month_attendance_count != 0 %>
     <%= link_to"[所属長承認のお知らせ]", edit_superior_approval_user_attendances_path(@user), remote: true, class: "text-danger" %>
