--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,22 +5,19 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "トップへ", root_path %></li>
         <% if logged_in? %>
-          <% if current_user.admin? %>
-          <li><%= link_to "ユーザー覧", users_path %></li>
-          <li><%= link_to "出勤社員一覧", working_employee_list_user_path(current_user) %></li>
-          <li><%= link_to "拠点情報修正ページ", offices_path %></li>
-          <li><%= link_to "基本情報の更新", edit_basic_info_user_path(current_user) %></li>
+          <% if current_staff.admin? %>
+          <li><%= link_to "利用者ー覧", clients_path %></li>
           <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント<b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <% if current_user.admin? %>
+              <% if current_staff.admin? %>
               <% else %>
-              <li><%= link_to "プロフィール", current_user %></li>
+              <li><%= link_to "プロフィール", current_staff %></li>
               <% end %>
-              <li><%= link_to "設定",  edit_user_path(current_user) %></li>
+              <li><%= link_to "設定",  edit_staff_path(current_staff) %></li>
               <li class="divider"></li>
               <li>
                <%= link_to "ログアウト", logout_path, method: :delete %>
