--- a/app/views/attendances/_attendance_change.html.erb
+++ b/app/views/attendances/_attendance_change.html.erb
@@ -6,9 +6,9 @@
         </button>
       </div>  
       <div class="modal-body">
-        <%= form_with(model: @user, url: update_attendance_change_user_attendances_path(@user), method: :patch, local: true) do |f| %> 
+        <%= form_with(model: @staff, url: update_attendance_change_staff_attendances_path(@staff), method: :patch, local: true) do |f| %> 
           <% @attendances.each do |id, attendance| %>  
-            <h1 class="modal-title"><%= User.find(id).name %>からの勤怠変更申請</h1>
+            <h1 class="modal-title"><%= Staff.find(id).name %>からの勤怠変更申請</h1>
             
             <table class="table table-bordered table-condensed table-hover" id="table-attendances">
               <thead>
@@ -67,7 +67,7 @@
                     <td><%= a.text_field :note, class: "form-control" %></td>
                     <td><%= a.select :change_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
                     <td><%= a.check_box :change, {}, "true", "false" %></td>
-                    <td><%= link_to "確認", new_show_change_user_attendance_path(id, day), class: "btn btn-primary" %></td>
+                    <td><%= link_to "確認", new_show_change_staff_attendance_path(id, day), class: "btn btn-primary" %></td>
                   </tbody>
                 <% end %>
               <% end %>
