--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -12,12 +12,12 @@
   <div class="col-md-10 col-md-offset-1">
     
       <table class="table">
-      <% @users.each do |user| %>
+      <% @staffs.each do |staff| %>
         <tr>
           <td>
-          <% if current_user.admin? && !current_user?(user) %>
-            <%= user.name %><br>
-            <%= link_to "削除", user, method: :delete,
+          <% if current_staff.admin? && !current_staff?(staff) %>
+            <%= staff.name %><br>
+            <%= link_to "削除", staff, method: :delete,
                   data: { confirm: "削除してよろしいですか？" },
                   class: "btn btn-primary" %>
             <br>
@@ -25,11 +25,11 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <button type="button" data-toggle="collapse" data-target="#collapse<%= user.id %>" class="btn btn-primary btn-lg">編集</button>
+                  <button type="button" data-toggle="collapse" data-target="#collapse<%= staff.id %>" class="btn btn-primary btn-lg">編集</button>
                 </h4>
               </div>
-              <div id="collapse<%= user.id %>" class="panel-collapse collapse">
-                <div class="panel-body"><%= render 'user', {user: user} %></div> 
+              <div id="collapse<%= staff.id %>" class="panel-collapse collapse">
+                <div class="panel-body"><%= render 'user', {staff: staff} %></div> 
                 </div>
               </div>
             </div>
