--- a/app/views/staffs/_staff.html.erb
+++ b/app/views/staffs/_staff.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: user, url:  update_basic_info_user_path(user), local: true, method: :patch) do |f| %>
-  <%= render 'shared/error_messages',  object: user %>
+<%= form_with(model: staff, url:  update_basic_info_staff_path(staff), local: true, method: :patch) do |f| %>
+  <%= render 'shared/error_messages',  object: staff %>
 
   <%= f.label :name, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :name, class: "form-control" %>
